MiniTriangle Compiler/Tests/ForVarToUntilError2.tri
!********** to expresion no entera **********
!Syntactic Analysis ...
!0
!Contextual Analysis ...
!ERROR: Integer result expected here 4..0
!ERROR: wrong type for const actual parameter 5..5

for
  var i := 1 to 10>10 until 10>10 do
    putint (1);
    putint (2);
end
